--fixedcutoffthings

--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -1,29 +1,27 @@
-$navbar-color: #bdbdbd;
+$navbar-color: rgb(223, 236, 245);
 $login-button-color: #0277bd;
 
-
 .nav-bar {
-   box-shadow: 2;
-   max-height: 5em !important; 
-   background-color: $navbar-color !important;
-   
+  box-shadow: 2;
+  max-height: 5em !important;
+  background-color: $navbar-color !important;
 
-   .login-button {
-      position: absolute;
-      right: 5%;
-      margin: -1.5em 0 0 0 !important;
-      background-color: $login-button-color;
-   }
+  .login-button {
+    position: absolute;
+    right: 3%;
+    margin: -1.5em 0 0 0 !important;
+    background-color: $login-button-color;
+  }
 
-   img {
-      max-width: 75%;
-      max-height: 75%;
-      padding-left: 1em;
-      margin: -1em 0 0 0;
-   }
+  img {
+    max-width: 75%;
+    max-height: 75%;
+    padding-left: 1em;
+    margin: -1em 0 0 0;
+  }
 
-   .login-link {
-      text-decoration: none;
-      color: white;
-   }
+  .login-link {
+    text-decoration: none;
+    color: white;
+  }
 }
