--- a/src/styles/ItemPage.scss
+++ b/src/styles/ItemPage.scss
@@ -1,33 +1,37 @@
 $back-button: #0277bd;
+$navbar-color: rgb(223, 236, 245);
 
-.page-container { 
-    margin-top: 2em;
+.page-container {
+  margin-top: 2em;
 
-    .product-card {
-        margin-top: 5em;
-      }
-    
-      .product-media {
-        padding-top: 25%;
-        justify-content: center;
-        width: 20em;
-        height: 10em;
-        background-color:#eeeeee
-      }
-    
-      .card-content {
-        box-shadow: 0px -2px 16px -8px rgba(0,0,0,0.75);
-      }
+  .product-card {
+    margin-top: 5em;
+    justify-content: center;
+    margin-right: 10%;
+    margin-left: 10%;
+  }
 
-      .price-text {
-          float: right;
-      }
+  .product-media {
+    padding-top: 25%;
+    justify-content: center;
+    width: 20em;
+    height: 10em;
+    background-color: #eeeeee;
+  }
 
-      .back-button {
-          background-color: $back-button;
-          color: white;
-      }
+  .card-content {
+    //box-shadow: 0px -2px 16px -8px rgba(0, 0, 0, 0.75);
+    background-color: $navbar-color;
+    height: 100%;
+    width: 100%;
+  }
+
+  .price-text {
+    float: right;
+  }
+
+  .back-button {
+    background-color: $back-button;
+    color: white;
+  }
 }
-
-
-
